--- a/musicplayer/src/main/res/layout/activity_main.xml
+++ b/musicplayer/src/main/res/layout/activity_main.xml
@@ -43,9 +43,9 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="65dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="14dp"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="89dp"
         android:layout_marginEnd="96dp"
         android:layout_marginBottom="96dp"
@@ -57,25 +57,26 @@
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="65dp"
-        android:layout_height="55dp"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
         android:layout_marginStart="96dp"
         android:layout_marginTop="89dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
+
         app:srcCompat="@android:drawable/ic_media_previous" />
 
     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="90dp"
         android:layout_height="92dp"
-        android:layout_marginStart="33dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="68dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintStart_toEndOf="@+id/imageButton3"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
@@ -97,16 +98,18 @@
 
     <ImageButton
         android:id="@+id/imageButton5"
-        android:layout_width="68dp"
-        android:layout_height="69dp"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
         android:layout_marginStart="149dp"
         android:layout_marginTop="117dp"
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/textViewSong"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_menu_share" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
