service_app edited

--- a/service_app/src/main/res/layout/activity_main.xml
+++ b/service_app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="380sp"
             android:layout_marginHorizontal="50dp"
-            app:srcCompat="@drawable/velials" />
+            app:srcCompat="@drawable/ym" />
 
     </LinearLayout>
 
@@ -40,7 +41,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Полчаса"
@@ -48,6 +49,7 @@
             android:textSize="22dp" />
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Velial Squad" />
